fix all bags (maybe no)

--- a/index.html
+++ b/index.html
@@ -22,30 +22,36 @@
   <body>
     <header>
       <nav>
-        <a class="header-logo" href="./index.html">Web<span>Studio</span></a>
+        <a class="header-logo" href="./index.html"
+          >Web<span class="header-studio">Studio</span></a
+        >
 
         <ul class="header-nav">
           <li>
-            <a href="">Studio</a>
+            <a class="nav-link" href="">Studio</a>
           </li>
 
           <li>
-            <a href="">Portfolio</a>
+            <a class="nav-link" href="">Portfolio</a>
           </li>
 
           <li>
-            <a href="">Contacts</a>
+            <a class="nav-link" href="">Contacts</a>
           </li>
         </ul>
       </nav>
       <address class="header-adress">
         <ul>
           <li>
-            <a href="mailto:info@devstudio.com">info@devstudio.com</a>
+            <a class="adress-link" href="mailto:info@devstudio.com"
+              >info@devstudio.com</a
+            >
           </li>
 
           <li>
-            <a href="tel:+110001111111">+11 (000) 111-11-11</a>
+            <a class="adress-link" href="tel:+110001111111"
+              >+11 (000) 111-11-11</a
+            >
           </li>
         </ul>
       </address>
@@ -150,7 +156,9 @@
     </main>
     <footer>
       <div class="banner-footer">
-        <a class="header-logo" href="./index.html">WebStudio</a>
+        <a class="header-logo" href="./index.html"
+          >Web<span class="footer-studio">Studio</span></a
+        >
         <p class="footer-desc">
           Increase the flow of customers and sales for your business with
           digital marketing & growth solutions.
