--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
           </li>
 
           <li>
-            <a class="nav-link" href="">Portfolio</a>
+            <a class="nav-link" href="./portfolio.html">Portfolio</a>
           </li>
 
           <li>
