Add Portfolio CSS

--- a/portfolio.html
+++ b/portfolio.html
@@ -54,7 +54,7 @@
       <section class="filters">
         <ul class="filter-buttons">
           <li class="button-all">
-            <button type="button"">All</button>
+            <button type="button">All</button>
           </li>
           <li class="button-web">
             <button type="button">Web Site</button>
@@ -63,9 +63,75 @@
             <button type="button">App</button>
           </li>
           <li class="button-design">
-<button type="button">Design</button>
+            <button type="button">Design</button>
           </li>
-          <li></li>
+          <li class="button-marketing">
+            <button type="button">Marketing</button>
+          </li>
+        </ul>
+      </section>
+      <section class="services">
+        <h1 hidden>Our services</h1>
+        <ul class="services-img">
+          <li>
+            <img
+              src="./images/portfolio-first.jpg"
+              alt="application creation"
+              width="360"
+            />
+            <h2 class="list of services">Banking App Interface Concept</h2>
+            <p>App</p>
+            <h2 class="list of services"></h2>
+            <p></p>
+          </li>
+          <li>
+            <img src="./images/portfolio-second.jpg" alt="payment by phone" /
+            width="360">
+            <h2 class="list of services">Cashless Payment</h2>
+            <p>Marketing</p>
+          </li>
+          <li>
+            <img src="./images/portfolio-three.jpg" alt="PC optimization" /
+            width="360">
+            <h2 class="list of services">Meditation App</h2>
+            <p>App</p>
+          </li>
+          <li>
+            <img src="./images/portfolio-four.jpg" alt="taxi services" /
+            width="360">
+            <h2 class="list of services">Taxi Service</h2>
+            <p>Marketing</p>
+          </li>
+          <li>
+            <img src="./images/portfolio-five.jpg" alt="phone screen pictures" /
+            width="360">
+            <h2 class="list of services">Screen Illustrations</h2>
+            <p>Design</p>
+          </li>
+          <li>
+            <img src="./images/portfolio-six.jpg" alt="conducting online
+            courses" / width="360">
+            <h2 class="list of services">Online Courses</h2>
+            <p>Marketing</p>
+          </li>
+          <li>
+            <img src="./images/portfolio-seven.jpg" alt="stories on instagram" /
+            width="360">
+            <h2 class="list of services">Instagram Stories Concept</h2>
+            <p>Design</p>
+          </li>
+          <li>
+            <img src="./images/portfolio-eith.jpg" alt="organic food image" /
+            width="360">
+            <h2 class="list of services">Organic Food</h2>
+            <p>Web Site</p>
+          </li>
+          <li>
+            <img src="./images/portfolio-nine.jpg" alt="making coffee in a cup"
+            / width="360">
+            <h2 class="list of services">Fresh Coffee</h2>
+            <p>Web Site</p>
+          </li>
         </ul>
       </section>
     </main>
