--- a/portfolio.html
+++ b/portfolio.html
@@ -52,21 +52,21 @@
     </header>
     <main>
       <section class="filters">
-        <ul class="filter-buttons">
-          <li class="button-all">
-            <button type="button">All</button>
+        <ul>
+          <li class="filter-buttons">
+            <button type="button" class="button-app">All</button>
           </li>
-          <li class="button-web">
-            <button type="button">Web Site</button>
+          <li class="filter-buttons-list">
+            <button type="button" class="button-list">Web Site</button>
           </li>
-          <li class="button-app">
-            <button type="button">App</button>
+          <li class="filter-buttons-list">
+            <button type="button" class="button-list">App</button>
           </li>
-          <li class="button-design">
-            <button type="button">Design</button>
+          <li class="filter-buttons-list">
+            <button type="button" class="button-list">Design</button>
           </li>
-          <li class="button-marketing">
-            <button type="button">Marketing</button>
+          <li class="filter-buttons-list">
+            <button type="button" class="button-list">Marketing</button>
           </li>
         </ul>
       </section>
@@ -79,58 +79,81 @@
               alt="application creation"
               width="360"
             />
-            <h2 class="list of services">Banking App Interface Concept</h2>
-            <p>App</p>
-            <h2 class="list of services"></h2>
-            <p></p>
+            <h2 class="list-of-services">Banking App Interface Concept</h2>
+            <p class="list-description">App</p>
           </li>
           <li>
-            <img src="./images/portfolio-second.jpg" alt="payment by phone" /
-            width="360">
-            <h2 class="list of services">Cashless Payment</h2>
-            <p>Marketing</p>
+            <img
+              src="./images/portfolio-second.jpg"
+              alt="payment by phone"
+              width="360"
+            />
+            <h2 class="list-of-services">Cashless Payment</h2>
+            <p class="list-description">Marketing</p>
           </li>
           <li>
-            <img src="./images/portfolio-three.jpg" alt="PC optimization" /
-            width="360">
-            <h2 class="list of services">Meditation App</h2>
-            <p>App</p>
+            <img
+              src="./images/portfolio-three.jpg"
+              alt="PC optimization"
+              width="360"
+            />
+            <h2 class="list-of-services">Meditation App</h2>
+            <p class="list-description">App</p>
           </li>
           <li>
-            <img src="./images/portfolio-four.jpg" alt="taxi services" /
-            width="360">
+            <img
+              src="./images/portfolio-four.jpg"
+              alt="taxi services"
+              width="360"
+            />
             <h2 class="list of services">Taxi Service</h2>
-            <p>Marketing</p>
+            <p class="list-description">Marketing</p>
           </li>
           <li>
-            <img src="./images/portfolio-five.jpg" alt="phone screen pictures" /
-            width="360">
+            <img
+              src="./images/portfolio-five.jpg"
+              alt="phone screen pictures"
+              width="360"
+            />
             <h2 class="list of services">Screen Illustrations</h2>
-            <p>Design</p>
+            <p class="list-description">Design</p>
           </li>
           <li>
-            <img src="./images/portfolio-six.jpg" alt="conducting online
-            courses" / width="360">
-            <h2 class="list of services">Online Courses</h2>
-            <p>Marketing</p>
+            <img
+              src="./images/portfolio-six.jpg"
+              alt="conducting online
+            courses"
+              width="360"
+            />
+            <h2 class="list-of-services">Online Courses</h2>
+            <p class="list-description">Marketing</p>
           </li>
           <li>
-            <img src="./images/portfolio-seven.jpg" alt="stories on instagram" /
-            width="360">
-            <h2 class="list of services">Instagram Stories Concept</h2>
-            <p>Design</p>
+            <img
+              src="./images/portfolio-seven.jpg"
+              alt="stories on instagram"
+              width="360"
+            />
+            <h2 class="list-of-services">Instagram Stories Concept</h2>
+            <p class="list-description">Design</p>
           </li>
           <li>
-            <img src="./images/portfolio-eith.jpg" alt="organic food image" /
-            width="360">
-            <h2 class="list of services">Organic Food</h2>
-            <p>Web Site</p>
+            <img
+              src="./images/portfolio-eith.jpg"
+              alt="organic food image"
+              width="360"
+            />
+            <h2 class="list-of-services">Organic Food</h2>
+            <p class="list-description">Web Site</p>
           </li>
           <li>
-            <img src="./images/portfolio-nine.jpg" alt="making coffee in a cup"
-            / width="360">
-            <h2 class="list of services">Fresh Coffee</h2>
-            <p>Web Site</p>
+            <img
+              src="./images/portfolio-nine.jpg"
+              alt="making coffee in a cup"
+              width="360"
+            />
+            <h2 class="list-of-services">Fresh Coffee</h2>
+            <p class="list-description">Web Site</p>
           </li>
         </ul>
       </section>
